--- a/index.html
+++ b/index.html
@@ -1,18 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>민기의 포트폴리오</title>
-    <meta name="description" content="민기의 프론트엔드 포트폴리오">
-    <meta name="author" content="MinKi">
-    <link rel="icon" type="image/png" href="imgs/favicon.png">
-    <script src="https://kit.fontawesome.com/c18d2b9f4b.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <script src="main.js" defer></script>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>민기의 포트폴리오</title>
+	<meta name="description" content="민기의 프론트엔드 포트폴리오">
+	<meta name="author" content="MinKi">
+	<link rel="icon" type="image/png" href="imgs/favicon.png">
+	<script src="https://kit.fontawesome.com/c18d2b9f4b.js" crossorigin="anonymous"></script>
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="style.css">
+	<script src="main.js" defer></script>
 </head>
 <body>
+	<!-- Navbar -->
+	<nav class="navbar">
+		<div class="navbar__logo">
+			<i class="fa-solid fa-alicorn"></i>
+			<a href="#">MinKi</a>
+		</div>
+		<div class="navbar__menu">
+			<ul class="navbar__menu">
+				<li class="navbar__menu__item">Home</li>
+				<li class="navbar__menu__item">About</li>
+				<li class="navbar__menu__item">Skills</li>
+				<li class="navbar__menu__item">Work</li>
+				<li class="navbar__menu__item">Testimonials</li>
+				<li class="navbar__menu__item">Contact</li>
+			</ul>
+		</div>
+	</nav>
+	<!-- About -->
+	<section class="about"></section>
+	<!-- Skills -->
+	<section class="skills"></section>
+	<!-- Work -->
+	<section class="work"></section>
+	<!-- Testimonials -->
+	<section class="testimonials"></section>
+	<!-- Contact -->
+	<section class="contact"></section>
 </body>
 </html>
