--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- Navbar -->
 	<nav class="navbar">
 		<div class="navbar__logo">
-			<i class="fa-solid fa-alicorn"></i>
+			<i class="fa-solid fa-face-smile-wink"></i>
 			<a href="#">MinKi</a>
 		</div>
 		<div class="navbar__menu">
@@ -31,8 +31,17 @@
 			</ul>
 		</div>
 	</nav>
+    <!-- Home -->
+    <section class="home">
+        <img src="imgs/profile.png" alt="MinKi's profile photo" class="home__avatar">
+        <h1 class="home__title">안녕하세요!<br>웹 프론트엔드 개발자 <br>김민기 입니다.</h1>
+        <h2 class="home__description">식사는 하셨나요?</h2>
+        <button class="home__contact">Contact Me</button>
+    </section>
 	<!-- About -->
-	<section class="about"></section>
+	<section class="about">
+
+    </section>
 	<!-- Skills -->
 	<section class="skills"></section>
 	<!-- Work -->
