--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- Navbar -->
 	<nav class="navbar">
 		<div class="navbar__logo">
-			<i class="fa-solid fa-face-smile-wink"></i>
+			<img src="imgs/favicon.png" alt="" class="navbar__logo__imgs">
 			<a href="#">MinKi</a>
 		</div>
 		<div class="navbar__menu">
@@ -31,17 +31,53 @@
 			</ul>
 		</div>
 	</nav>
-    <!-- Home -->
-    <section class="home">
-        <img src="imgs/profile.png" alt="MinKi's profile photo" class="home__avatar">
-        <h1 class="home__title">안녕하세요!<br>웹 프론트엔드 개발자 <br>김민기 입니다.</h1>
-        <h2 class="home__description">식사는 하셨나요?</h2>
-        <button class="home__contact">Contact Me</button>
-    </section>
+  <!-- Home -->
+  <section class="home">
+    <img src="imgs/profile.png" alt="MinKi's profile photo" class="home__avatar">
+    <h1 class="home__title">안녕하세요!<br>웹 프론트엔드 개발자 <br>김민기 입니다.</h1>
+    <h2 class="home__description">식사는 하셨나요?</h2>
+    <button class="home__contact">Contact Me</button>
+  </section>
 	<!-- About -->
 	<section class="about">
-
-    </section>
+    <h1>About me</h1>
+    <p>안녕하세요, 식사는 하셨나요? 밥 값하는 프론트 엔드 개발자가 되고 싶은 김민기입니다. 프론트 엔드 개발에 흥미를 느끼게 되어 전공학과를 졸업한 후에 프론트엔드에 관한 공부를 꾸준히 해왔고, 이제는 실무를 배우기 위해서 지원하게 되었습니다.</p>
+    <div class="about__majors">
+      <div class="major">
+        <div class="major__icon">
+          <i class="fa-brands fa-html5"></i>
+        </div>
+        <div class="major__title">HTML</div>
+        <div class="major__description">웹 페이지와 내용을 구조화 할 수 있어요!</div>
+      </div>
+      <div class="major">
+        <div class="major__icon">
+          <i class="fa-brands fa-css3-alt"></i>
+        </div>
+        <div class="major__title">CSS</div>
+        <div class="major__description">마크업 언어의 레이아웃과 스타일을 꾸며 줄 수 있어요!</div>
+      </div>
+      <div class="major">
+        <div class="major__icon">
+          <i class="fa-brands fa-js"></i>
+        </div>
+        <div class="major__title">Javascript</div>
+        <div class="major__description">웹 페이지에 기능을 더해 웹 페이지를<br>동적이고 살아 있게 만들 수 있어요!</div>
+      </div>
+    </div>
+    <div class="about__career">
+      <div class="school">
+        <img src="imgs/school-logo.png" alt="bucheon-university" class="school__logo">
+        <p class="school__name">컴퓨터소프트웨어학과</p>
+        <p class="school__period">2017-03 / 2023-02</p>
+      </div>
+      <div class="academy">
+        <img src="" alt="" class="academy__logo">
+        <p class="academy__name">추가 예정</p>
+        <p class="academy__period">2023-02 / 2023-0?</p>
+      </div>
+    </div>
+  </section>
 	<!-- Skills -->
 	<section class="skills"></section>
 	<!-- Work -->
