--- a/index.html
+++ b/index.html
@@ -79,7 +79,62 @@
     </div>
   </section>
 	<!-- Skills -->
-	<section class="skills"></section>
+	<section class="skills">
+    <h1>Skills</h1>
+    <h2>Skills & Attributes</h2>
+    <p>
+      새로운 기술을 배우는 것에 대한 열정이 있고, 팀 환경 내에서 독립적으로 작업할 수 있습니다. 계획 및 시간 계획 수립, 엄격한 시간 압박 하에서 작업하고 필요할 때 신속하게 적응할 수 있는 능력이 있습니다.
+    </p>
+    <div class="skillset">
+      <div class="skillset__left">
+        <h3 class="skillset__title">Skills</h3>
+        <div class="skill">
+          <div class="skill_description">
+            <span>HTML</span>
+            <span>95%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill_description">
+            <span>CSS</span>
+            <span>90%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill_description">
+            <span>Javascript</span>
+            <span>80%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value"></div>
+          </div>
+        </div>
+      </div>
+      <div class="skillset__right">
+        <div class="tools">
+          <h3 class="skillset__title">Tools</h3>
+          <div class="tools__list">
+            <ul class="tools__list">
+              <li><span>Visual Studio Code</span></li>
+              <li><span>Atom</span></li>
+            </ul>
+          </div>
+        </div>
+        <div class="etc">
+          <h3 class="skillset__title">Etc</h3>
+          <ul class="etc__list">
+            <li><span>Git</span></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
 	<!-- Work -->
 	<section class="work"></section>
 	<!-- Testimonials -->
