--- a/index.html
+++ b/index.html
@@ -205,7 +205,26 @@
     </div>
   </section>
 	<!-- Testimonials -->
-	<section class="testimonials"></section>
+	<section class="testimonials">
+    <h1>Testimonials</h1>
+    <h3>See what they say about me</h3>
+    <div class="testimonials">
+      <div class="testimonial">
+        <img src="imgs/testimonials/people1.jpg" alt="People" class="testimonial__avatar">
+      </div>
+      <div class="testimonial__speech-bubble">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus beatae accusamus a cupiditate rerum. Necessitatibus recusandae natus consequuntur id a debitis vitae. Laudantium quibusdam eum blanditiis animi, accusantium cumque nam!</p>
+        <p class="name"><a href="">Ellie</a> / Samsung</p>
+      </div>
+      <div class="testimonial">
+        <img src="imgs/testimonials/people1.jpg" alt="People" class="testimonial__avatar">
+      </div>
+      <div class="testimonial__speech-bubble">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus beatae accusamus a cupiditate rerum. Necessitatibus recusandae natus consequuntur id a debitis vitae. Laudantium quibusdam eum blanditiis animi, accusantium cumque nam!</p>
+        <p class="name"><a href="">Ellie</a> / Samsung</p>
+      </div>
+    </div>
+  </section>
 	<!-- Contact -->
 	<section class="contact"></section>
 </body>
