--- a/index.html
+++ b/index.html
@@ -226,6 +226,18 @@
     </div>
   </section>
 	<!-- Contact -->
-	<section class="contact"></section>
+	<section class="contact">
+    <h1 class="contact__title">Let's talk</h1>
+    <h2 class="contact__email">kimminki02@naver.com</h2>
+    <div class="conatact__links">
+      <a href="https://github.com/alsrl1371" target="_blank">
+        <i class="fa-brands fa-github"></i>
+      </a>
+      <a href="#" target="_blank">
+        <i class="fa-brands fa-linkedin"></i>
+      </a>
+    </div>
+    <p class="contact__rights">제작년도 : 2022-12-14</p>
+  </section>
 </body>
 </html>
