--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 </head>
 <body>
 	<!-- Navbar -->
-	<nav class="navbar">
+	<nav id="navbar">
 		<div class="navbar__logo">
 			<img src="imgs/favicon.png" alt="" class="navbar__logo__imgs">
 			<a href="#">MinKi</a>
 		</div>
 		<div class="navbar__menu">
 			<ul class="navbar__menu">
-				<li class="navbar__menu__item">Home</li>
+				<li class="navbar__menu__item active">Home</li>
 				<li class="navbar__menu__item">About</li>
 				<li class="navbar__menu__item">Skills</li>
 				<li class="navbar__menu__item">Work</li>
@@ -32,14 +32,14 @@
 		</div>
 	</nav>
   <!-- Home -->
-  <section class="home">
+  <section id="home">
     <img src="imgs/profile.png" alt="MinKi's profile photo" class="home__avatar">
     <h1 class="home__title">안녕하세요!<br>웹 프론트엔드 개발자 <br>김민기 입니다.</h1>
     <h2 class="home__description">식사는 하셨나요?</h2>
     <button class="home__contact">Contact Me</button>
   </section>
 	<!-- About -->
-	<section class="about">
+	<section id="about">
     <h1>About me</h1>
     <p>안녕하세요, 식사는 하셨나요? 밥 값하는 프론트 엔드 개발자가 되고 싶은 김민기입니다. 프론트 엔드 개발에 흥미를 느끼게 되어 전공학과를 졸업한 후에 프론트엔드에 관한 공부를 꾸준히 해왔고, 이제는 실무를 배우기 위해서 지원하게 되었습니다.</p>
     <div class="about__majors">
@@ -79,7 +79,7 @@
     </div>
   </section>
 	<!-- Skills -->
-	<section class="skills">
+	<section id="skills">
     <h1>Skills</h1>
     <h2>Skills & Attributes</h2>
     <p>
@@ -136,7 +136,7 @@
     </div>
   </section>
 	<!-- Work -->
-	<section class="work">
+	<section id="work">
     <h1>My work</h1>
     <h3>Projects</h3>
     <div class="work__categories">
@@ -205,7 +205,7 @@
     </div>
   </section>
 	<!-- Testimonials -->
-	<section class="testimonials">
+	<section id="testimonials">
     <h1>Testimonials</h1>
     <h3>See what they say about me</h3>
     <div class="testimonials">
@@ -226,7 +226,7 @@
     </div>
   </section>
 	<!-- Contact -->
-	<section class="contact">
+	<section id="contact">
     <h1 class="contact__title">Let's talk</h1>
     <h2 class="contact__email">kimminki02@naver.com</h2>
     <div class="conatact__links">
