--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <button class="home__contact">Contact Me</button>
   </section>
 	<!-- About -->
-	<section id="about">
+	<section id="about" class="section">
     <h1>About me</h1>
     <p>안녕하세요, 식사는 하셨나요? 밥 값하는 프론트 엔드 개발자가 되고 싶은 김민기입니다. 프론트 엔드 개발에 흥미를 느끼게 되어 전공학과를 졸업한 후에 프론트엔드에 관한 공부를 꾸준히 해왔고, 이제는 실무를 배우기 위해서 지원하게 되었습니다.</p>
     <div class="about__majors">
@@ -68,18 +68,22 @@
     <div class="about__career">
       <div class="school">
         <img src="imgs/school-logo.png" alt="bucheon-university" class="school__logo">
-        <p class="school__name">컴퓨터소프트웨어학과</p>
-        <p class="school__period">2017-03 / 2023-02</p>
+        <div class="school__description">
+          <p class="school__name">컴퓨터소프트웨어학과</p>
+          <p class="school__period">2017-03 / 2023-02</p>
+        </div>
       </div>
       <div class="academy">
-        <img src="" alt="" class="academy__logo">
-        <p class="academy__name">추가 예정</p>
-        <p class="academy__period">2023-02 / 2023-0?</p>
+        <img src="imgs/academy-logo.png" alt="" class="academy__logo">
+        <div class="academy__description">
+          <p class="academy__name">추가 예정</p>
+          <p class="academy__period">2023-02 / 2023-0?</p>
+        </div>
       </div>
     </div>
   </section>
 	<!-- Skills -->
-	<section id="skills">
+	<section id="skills" class="section">
     <h1>Skills</h1>
     <h2>Skills & Attributes</h2>
     <p>
@@ -136,7 +140,7 @@
     </div>
   </section>
 	<!-- Work -->
-	<section id="work">
+	<section id="work" class="section">
     <h1>My work</h1>
     <h3>Projects</h3>
     <div class="work__categories">
@@ -205,7 +209,7 @@
     </div>
   </section>
 	<!-- Testimonials -->
-	<section id="testimonials">
+	<section id="testimonials" class="section">
     <h1>Testimonials</h1>
     <h3>See what they say about me</h3>
     <div class="testimonials">
@@ -226,7 +230,7 @@
     </div>
   </section>
 	<!-- Contact -->
-	<section id="contact">
+	<section id="contact" class="section">
     <h1 class="contact__title">Let's talk</h1>
     <h2 class="contact__email">kimminki02@naver.com</h2>
     <div class="conatact__links">
