--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
 	<!-- About -->
 	<section id="about" class="section">
     <h1>About me</h1>
-    <p>안녕하세요, 식사는 하셨나요? 밥 값하는 프론트 엔드 개발자가 되고 싶은 김민기입니다. 프론트 엔드 개발에 흥미를 느끼게 되어 전공학과를 졸업한 후에 프론트엔드에 관한 공부를 꾸준히 해왔고, 이제는 실무를 배우기 위해서 지원하게 되었습니다.</p>
+    <p>안녕하세요! 식사는 하셨나요? 밥 값하는 프론트 엔드 개발자가 되고 싶은 김민기입니다.<br>프론트 엔드 개발에 흥미를 느끼게 되어 전공학과를 졸업한 후에 프론트엔드에 관한 공부를 꾸준히 해왔고,<br>이제는 실무를 배워가며 더 성장하기 위해서 지원하게 되었습니다.</p>
     <div class="about__majors">
       <div class="major">
         <div class="major__icon">
           <i class="fa-brands fa-html5"></i>
         </div>
         <div class="major__title">HTML</div>
-        <div class="major__description">웹 페이지와 내용을 구조화 할 수 있어요!</div>
+        <div class="major__description">웹 페이지와 내용을 구조화할 수 있어요!</div>
       </div>
       <div class="major">
         <div class="major__icon">
           <i class="fa-brands fa-css3-alt"></i>
         </div>
         <div class="major__title">CSS</div>
-        <div class="major__description">마크업 언어의 레이아웃과 스타일을 꾸며 줄 수 있어요!</div>
+        <div class="major__description">마크업 언어의 레이아웃과 스타일을 꾸며줄 수 있어요!</div>
       </div>
       <div class="major">
         <div class="major__icon">
@@ -84,10 +84,11 @@
   </section>
 	<!-- Skills -->
 	<section id="skills" class="section">
-    <h1>Skills</h1>
+    <div class="section__container">
+      <h1>Skills</h1>
     <h2>Skills & Attributes</h2>
     <p>
-      새로운 기술을 배우는 것에 대한 열정이 있고, 팀 환경 내에서 독립적으로 작업할 수 있습니다. 계획 및 시간 계획 수립, 엄격한 시간 압박 하에서 작업하고 필요할 때 신속하게 적응할 수 있는 능력이 있습니다.
+      새로운 기술을 배우는 것에 대한 열정이 있고, 팀 환경 내에서 독립적으로 작업할 수 있습니다.<br>계획 및 시간, 계획 수립, 엄격한 시간 압박 하에서 작업하고 필요할 때 신속하게 적응할 수 있는 능력이 있습니다.
     </p>
     <div class="skillset">
       <div class="skillset__left">
@@ -98,7 +99,7 @@
             <span>95%</span>
           </div>
           <div class="skill__bar">
-            <div class="skill__value"></div>
+            <div class="skill__value" style="width: 95%;"></div>
           </div>
         </div>
         <div class="skill">
@@ -107,7 +108,7 @@
             <span>90%</span>
           </div>
           <div class="skill__bar">
-            <div class="skill__value"></div>
+            <div class="skill__value" style="width: 90%;"></div>
           </div>
         </div>
         <div class="skill">
@@ -116,7 +117,34 @@
             <span>80%</span>
           </div>
           <div class="skill__bar">
-            <div class="skill__value"></div>
+            <div class="skill__value" style="width: 80%;"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill_description">
+            <span>Typescript</span>
+            <span>0%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value" style="width: 0%;"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill_description">
+            <span>React</span>
+            <span>0%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value" style="width: 0%;"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill_description">
+            <span>NodeJS</span>
+            <span>0%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value" style="width: 0%;"></div>
           </div>
         </div>
       </div>
@@ -127,6 +155,7 @@
             <ul class="tools__list">
               <li><span>Visual Studio Code</span></li>
               <li><span>Atom</span></li>
+              <li><span>Sketch app</span></li>
             </ul>
           </div>
         </div>
@@ -137,6 +166,7 @@
           </ul>
         </div>
       </div>
+    </div>
     </div>
   </section>
 	<!-- Work -->
