--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <h1>My work</h1>
     <h3>Projects</h3>
     <div class="work__categories">
-      <button class="category__btn">All<span class="category__count">8</span></button>
+      <button class="category__btn active">All<span class="category__count">8</span></button>
       <button class="category__btn">PC<span class="category__count">3</span></button>
       <button class="category__btn">MOBILE<span class="category__count">3</span></button>
       <button class="category__btn">RESPONSIVE<span class="category__count">2</span></button>
