--- a/index.html
+++ b/index.html
@@ -40,44 +40,46 @@
   </section>
 	<!-- About -->
 	<section id="about" class="section">
-    <h1>About me</h1>
-    <p>안녕하세요! 식사는 하셨나요? 밥 값하는 프론트 엔드 개발자가 되고 싶은 김민기입니다.<br>프론트 엔드 개발에 흥미를 느끼게 되어 전공학과를 졸업한 후에 프론트엔드에 관한 공부를 꾸준히 해왔고,<br>이제는 실무를 배워가며 더 성장하기 위해서 지원하게 되었습니다.</p>
-    <div class="about__majors">
-      <div class="major">
-        <div class="major__icon">
-          <i class="fa-brands fa-html5"></i>
+    <div class="section__container">
+      <h1>About me</h1>
+      <p>안녕하세요! 식사는 하셨나요? 밥 값하는 프론트 엔드 개발자가 되고 싶은 김민기입니다.<br>프론트 엔드 개발에 흥미를 느끼게 되어 전공학과를 졸업한 후에 프론트엔드에 관한 공부를 꾸준히 해왔고,<br>이제는 실무를 배워가며 더 성장하기 위해서 지원하게 되었습니다.</p>
+      <div class="about__majors">
+        <div class="major">
+          <div class="major__icon">
+            <i class="fa-brands fa-html5"></i>
+          </div>
+          <div class="major__title">HTML</div>
+          <div class="major__description">웹 페이지와 내용을 구조화할 수 있어요!</div>
         </div>
-        <div class="major__title">HTML</div>
-        <div class="major__description">웹 페이지와 내용을 구조화할 수 있어요!</div>
-      </div>
-      <div class="major">
-        <div class="major__icon">
-          <i class="fa-brands fa-css3-alt"></i>
+        <div class="major">
+          <div class="major__icon">
+            <i class="fa-brands fa-css3-alt"></i>
+          </div>
+          <div class="major__title">CSS</div>
+          <div class="major__description">마크업 언어의 레이아웃과 스타일을 꾸며줄 수 있어요!</div>
         </div>
-        <div class="major__title">CSS</div>
-        <div class="major__description">마크업 언어의 레이아웃과 스타일을 꾸며줄 수 있어요!</div>
-      </div>
-      <div class="major">
-        <div class="major__icon">
-          <i class="fa-brands fa-js"></i>
-        </div>
-        <div class="major__title">Javascript</div>
-        <div class="major__description">웹 페이지에 기능을 더해 웹 페이지를<br>동적이고 살아 있게 만들 수 있어요!</div>
-      </div>
-    </div>
-    <div class="about__career">
-      <div class="school">
-        <img src="imgs/school-logo.png" alt="bucheon-university" class="school__logo">
-        <div class="school__description">
-          <p class="school__name">컴퓨터소프트웨어학과</p>
-          <p class="school__period">2017-03 / 2023-02</p>
+        <div class="major">
+          <div class="major__icon">
+            <i class="fa-brands fa-js"></i>
+          </div>
+          <div class="major__title">Javascript</div>
+          <div class="major__description">웹 페이지에 기능을 더해 웹 페이지를<br>동적이고 살아 있게 만들 수 있어요!</div>
         </div>
       </div>
-      <div class="academy">
-        <img src="imgs/academy-logo.png" alt="" class="academy__logo">
-        <div class="academy__description">
-          <p class="academy__name">추가 예정</p>
-          <p class="academy__period">2023-02 / 2023-0?</p>
+      <div class="about__career">
+        <div class="school">
+          <img src="imgs/school-logo.png" alt="bucheon-university" class="school__logo">
+          <div class="school__description">
+            <p class="school__name">컴퓨터소프트웨어학과</p>
+            <p class="school__period">2017-03 / 2023-02</p>
+          </div>
+        </div>
+        <div class="academy">
+          <img src="imgs/academy-logo.png" alt="" class="academy__logo">
+          <div class="academy__description">
+            <p class="academy__name">추가 예정</p>
+            <p class="academy__period">2023-02 / 2023-0?</p>
+          </div>
         </div>
       </div>
     </div>
@@ -171,91 +173,95 @@
   </section>
 	<!-- Work -->
 	<section id="work" class="section">
-    <h1>My work</h1>
-    <h3>Projects</h3>
-    <div class="work__categories">
-      <button class="category__btn active">All<span class="category__count">8</span></button>
-      <button class="category__btn">PC<span class="category__count">3</span></button>
-      <button class="category__btn">MOBILE<span class="category__count">3</span></button>
-      <button class="category__btn">RESPONSIVE<span class="category__count">2</span></button>
-    </div>
-    <div class="work__projects">
-      <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
-        <img src="imgs/projects/project1.png" class="project__img" alt="project1">
-        <div class="project__description">
-          <h3>~~Site</h3>
-          <span>~~~샬라샬라</span>
-        </div>
-      </a>
-      <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
-        <img src="imgs/projects/project2.png" class="project__img" alt="project1">
-        <div class="project__description">
-          <h3>~~Site</h3>
-          <span>~~~샬라샬라</span>
-        </div>
-      </a>
-      <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
-        <img src="imgs/projects/project3.png" class="project__img" alt="project1">
-        <div class="project__description">
-          <h3>~~Site</h3>
-          <span>~~~샬라샬라</span>
-        </div>
-      </a>
-      <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
-        <img src="imgs/projects/project4.png" class="project__img" alt="project1">
-        <div class="project__description">
-          <h3>~~Site</h3>
-          <span>~~~샬라샬라</span>
-        </div>
-      </a>
-      <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
-        <img src="imgs/projects/project5.png" class="project__img" alt="project1">
-        <div class="project__description">
-          <h3>~~Site</h3>
-          <span>~~~샬라샬라</span>
-        </div>
-      </a>
-      <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
-        <img src="imgs/projects/project6.png" class="project__img" alt="project1">
-        <div class="project__description">
-          <h3>~~Site</h3>
-          <span>~~~샬라샬라</span>
-        </div>
-      </a>
-      <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
-        <img src="imgs/projects/project7.png" class="project__img" alt="project1">
-        <div class="project__description">
-          <h3>~~Site</h3>
-          <span>~~~샬라샬라</span>
-        </div>
-      </a>
-      <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
-        <img src="imgs/projects/project8.png" class="project__img" alt="project1">
-        <div class="project__description">
-          <h3>~~Site</h3>
-          <span>~~~샬라샬라</span>
-        </div>
-      </a>
+    <div class="section__container">
+      <h1>My work</h1>
+      <h3>Projects</h3>
+      <div class="work__categories">
+        <button class="category__btn active">All<span class="category__count">8</span></button>
+        <button class="category__btn">PC<span class="category__count">3</span></button>
+        <button class="category__btn">MOBILE<span class="category__count">3</span></button>
+        <button class="category__btn">RESPONSIVE<span class="category__count">2</span></button>
+      </div>
+      <div class="work__projects">
+        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
+          <img src="imgs/projects/project1.png" class="project__img" alt="project1">
+          <div class="project__description">
+            <h3>~~Site</h3>
+            <span>~~~샬라샬라</span>
+          </div>
+        </a>
+        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
+          <img src="imgs/projects/project2.png" class="project__img" alt="project1">
+          <div class="project__description">
+            <h3>~~Site</h3>
+            <span>~~~샬라샬라</span>
+          </div>
+        </a>
+        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
+          <img src="imgs/projects/project3.png" class="project__img" alt="project1">
+          <div class="project__description">
+            <h3>~~Site</h3>
+            <span>~~~샬라샬라</span>
+          </div>
+        </a>
+        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
+          <img src="imgs/projects/project4.png" class="project__img" alt="project1">
+          <div class="project__description">
+            <h3>~~Site</h3>
+            <span>~~~샬라샬라</span>
+          </div>
+        </a>
+        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
+          <img src="imgs/projects/project5.png" class="project__img" alt="project1">
+          <div class="project__description">
+            <h3>~~Site</h3>
+            <span>~~~샬라샬라</span>
+          </div>
+        </a>
+        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
+          <img src="imgs/projects/project6.png" class="project__img" alt="project1">
+          <div class="project__description">
+            <h3>~~Site</h3>
+            <span>~~~샬라샬라</span>
+          </div>
+        </a>
+        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
+          <img src="imgs/projects/project7.png" class="project__img" alt="project1">
+          <div class="project__description">
+            <h3>~~Site</h3>
+            <span>~~~샬라샬라</span>
+          </div>
+        </a>
+        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
+          <img src="imgs/projects/project8.png" class="project__img" alt="project1">
+          <div class="project__description">
+            <h3>~~Site</h3>
+            <span>~~~샬라샬라</span>
+          </div>
+        </a>
+      </div>
     </div>
   </section>
 	<!-- Testimonials -->
 	<section id="testimonials" class="section">
-    <h1>Testimonials</h1>
-    <h3>See what they say about me</h3>
-    <div class="testimonials">
-      <div class="testimonial">
-        <img src="imgs/testimonials/people1.jpg" alt="People" class="testimonial__avatar">
-        <div class="testimonial__speech-bubble">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus beatae accusamus a cupiditate rerum. Necessitatibus recusandae natus consequuntur id a debitis vitae. Laudantium quibusdam eum blanditiis animi, accusantium cumque nam!</p>
-          <p class="name"><a href="">Ellie</a> / Samsung</p>
+    <div class="section__container">
+      <h1>Testimonials</h1>
+      <h3>See what they say about me</h3>
+      <div class="testimonials">
+        <div class="testimonial">
+          <img src="imgs/testimonials/people1.jpg" alt="People" class="testimonial__avatar">
+          <div class="testimonial__speech-bubble">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus beatae accusamus a cupiditate rerum. Necessitatibus recusandae natus consequuntur id a debitis vitae. Laudantium quibusdam eum blanditiis animi, accusantium cumque nam!</p>
+            <p class="name"><a href="">Ellie</a> / Samsung</p>
+          </div>
         </div>
-      </div>
-      <div class="testimonial">
-        <div class="testimonial__speech-bubble">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus beatae accusamus a cupiditate rerum. Necessitatibus recusandae natus consequuntur id a debitis vitae. Laudantium quibusdam eum blanditiis animi, accusantium cumque nam!</p>
-          <p class="name"><a href="">Ellie</a> / Samsung</p>
+        <div class="testimonial">
+          <div class="testimonial__speech-bubble">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus beatae accusamus a cupiditate rerum. Necessitatibus recusandae natus consequuntur id a debitis vitae. Laudantium quibusdam eum blanditiis animi, accusantium cumque nam!</p>
+            <p class="name"><a href="">Ellie</a> / Samsung</p>
+          </div>
+          <img src="imgs/testimonials/people1.jpg" alt="People" class="testimonial__avatar">
         </div>
-        <img src="imgs/testimonials/people1.jpg" alt="People" class="testimonial__avatar">
       </div>
     </div>
   </section>
