--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
 				<li class="navbar__menu__item">Contact</li>
 			</ul>
 		</div>
+
+    <!-- Toggle button -->
+    <button class="navbar__toggle-btn">
+      <i class="fa-solid fa-bars"></i>
+    </button>
 	</nav>
+
+
   <!-- Home -->
   <section id="home">
     <img src="imgs/profile.png" alt="MinKi's profile photo" class="home__avatar">
