--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
 
   <!-- Home -->
   <section id="home">
-    <img src="imgs/profile.png" alt="MinKi's profile photo" class="home__avatar">
-    <h1 class="home__title">안녕하세요!<br>웹 프론트엔드 개발자 <br>김민기 입니다.</h1>
-    <h2 class="home__description">식사는 하셨나요?</h2>
-    <button class="home__contact">Contact Me</button>
+    <div class="home__container">
+      <img src="imgs/profile.png" alt="MinKi's profile photo" class="home__avatar">
+      <h1 class="home__title">안녕하세요!<br>웹 프론트엔드 개발자 <br>김민기 입니다.</h1>
+      <h2 class="home__description">식사는 하셨나요?</h2>
+      <button class="home__contact">Contact Me</button>
+    </div>
   </section>
 	<!-- About -->
 	<section id="about" class="section">
