--- a/index.html
+++ b/index.html
@@ -288,5 +288,10 @@
     </div>
     <p class="contact__rights">제작년도 : 2022-12-14</p>
   </section>
+
+  <!-- Arrow button -->
+  <button class="arrow-up">
+    <i class="fa-solid fa-arrow-up"></i>
+  </button>
 </body>
 </html>
