JS: Project filtering

--- a/index.html
+++ b/index.html
@@ -186,63 +186,95 @@
       <h1>My work</h1>
       <h3>Projects</h3>
       <div class="work__categories">
-        <button class="category__btn active">All<span class="category__count">8</span></button>
-        <button class="category__btn">PC<span class="category__count">3</span></button>
-        <button class="category__btn">MOBILE<span class="category__count">3</span></button>
-        <button class="category__btn">RESPONSIVE<span class="category__count">2</span></button>
+        <button class="category__btn active" data-filter="*">All<span class="category__count">8</span></button>
+        <button class="category__btn" data-filter="pc">PC<span class="category__count">3</span></button>
+        <button class="category__btn" data-filter="mobile">MOBILE<span class="category__count">3</span></button>
+        <button class="category__btn" data-filter="responsive">RESPONSIVE<span class="category__count">2</span></button>
       </div>
       <div class="work__projects">
-        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
-          <img src="imgs/projects/project1.png" class="project__img" alt="project1">
+        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank" data-type="responsive">
+          <img 
+            src="imgs/projects/project1.png" 
+            class="project__img" 
+            alt="project1"
+          >
           <div class="project__description">
             <h3>~~Site</h3>
             <span>~~~샬라샬라</span>
           </div>
         </a>
-        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
-          <img src="imgs/projects/project2.png" class="project__img" alt="project1">
+        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank" data-type="mobile">
+          <img 
+            src="imgs/projects/project2.png" 
+            class="project__img" 
+            alt="project1"
+          >
           <div class="project__description">
             <h3>~~Site</h3>
             <span>~~~샬라샬라</span>
           </div>
         </a>
-        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
-          <img src="imgs/projects/project3.png" class="project__img" alt="project1">
+        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank" data-type="pc">
+          <img 
+            src="imgs/projects/project3.png" 
+            class="project__img" 
+            alt="project1"
+          >
           <div class="project__description">
             <h3>~~Site</h3>
             <span>~~~샬라샬라</span>
           </div>
         </a>
-        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
-          <img src="imgs/projects/project4.png" class="project__img" alt="project1">
+        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank" data-type="pc">
+          <img 
+            src="imgs/projects/project4.png" 
+            class="project__img" 
+            alt="project1"
+          >
           <div class="project__description">
             <h3>~~Site</h3>
             <span>~~~샬라샬라</span>
           </div>
         </a>
-        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
-          <img src="imgs/projects/project5.png" class="project__img" alt="project1">
+        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank" data-type="mobile">
+          <img 
+            src="imgs/projects/project5.png" 
+            class="project__img" 
+            alt="project1"
+          >
           <div class="project__description">
             <h3>~~Site</h3>
             <span>~~~샬라샬라</span>
           </div>
         </a>
-        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
-          <img src="imgs/projects/project6.png" class="project__img" alt="project1">
+        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank" data-type="pc">
+          <img 
+            src="imgs/projects/project6.png" 
+            class="project__img" 
+            alt="project1"
+          >
           <div class="project__description">
             <h3>~~Site</h3>
             <span>~~~샬라샬라</span>
           </div>
         </a>
-        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
-          <img src="imgs/projects/project7.png" class="project__img" alt="project1">
+        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank" data-type="mobile">
+          <img 
+            src="imgs/projects/project7.png" 
+            class="project__img" 
+            alt="project1"
+          >
           <div class="project__description">
             <h3>~~Site</h3>
             <span>~~~샬라샬라</span>
           </div>
         </a>
-        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank">
-          <img src="imgs/projects/project8.png" class="project__img" alt="project1">
+        <a href="https://github.com/alsrl1371/portfolio" class="project" target="blank" data-type="pc">
+          <img 
+            src="imgs/projects/project8.png" 
+            class="project__img" 
+            alt="project1"
+          >
           <div class="project__description">
             <h3>~~Site</h3>
             <span>~~~샬라샬라</span>
