--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <h1>My work</h1>
       <h3>Projects</h3>
       <div class="work__categories">
-        <button class="category__btn active" data-filter="*">All<span class="category__count">8</span></button>
+        <button class="category__btn selected" data-filter="*">All<span class="category__count">8</span></button>
         <button class="category__btn" data-filter="pc">PC<span class="category__count">3</span></button>
         <button class="category__btn" data-filter="mobile">MOBILE<span class="category__count">3</span></button>
         <button class="category__btn" data-filter="responsive">RESPONSIVE<span class="category__count">2</span></button>
