--- a/index.html
+++ b/index.html
@@ -7,12 +7,23 @@
 	<title>민기의 포트폴리오</title>
 	<meta name="description" content="민기의 프론트엔드 포트폴리오">
 	<meta name="author" content="MinKi">
+
+  <!-- Favicon -->
 	<link rel="icon" type="image/png" href="imgs/favicon.png">
+
+  <!-- Font awesome -->
 	<script src="https://kit.fontawesome.com/c18d2b9f4b.js" crossorigin="anonymous"></script>
+
+  <!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
 	<link rel="stylesheet" href="style.css">
+
+  <!-- Java Script -->
 	<script src="main.js" defer></script>
 </head>
+
 <body>
 	<!-- Navbar -->
 	<nav id="navbar">
@@ -47,6 +58,7 @@
       <button class="home__contact">Contact Me</button>
     </div>
   </section>
+
 	<!-- About -->
 	<section id="about" class="section">
     <div class="section__container">
@@ -93,6 +105,7 @@
       </div>
     </div>
   </section>
+
 	<!-- Skills -->
 	<section id="skills" class="section">
     <div class="section__container">
@@ -180,6 +193,7 @@
     </div>
     </div>
   </section>
+
 	<!-- Work -->
 	<section id="work" class="section">
     <div class="section__container">
@@ -283,6 +297,7 @@
       </div>
     </div>
   </section>
+
 	<!-- Testimonials -->
 	<section id="testimonials" class="section">
     <div class="section__container">
@@ -306,6 +321,7 @@
       </div>
     </div>
   </section>
+  
 	<!-- Contact -->
 	<section id="contact" class="section">
     <h1 class="contact__title">Let's talk</h1>
